--- a/oblachnie-servisi.html
+++ b/oblachnie-servisi.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -41,10 +41,10 @@
         <p>
             <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Облачные сервисы</b>, <b>или «облака»</b> — это сеть мощных компьютеров — серверов,
             которые позволяют клиентам пользоваться своими ресурсами через интернет: хранить файлы и обмениваться ими,
-            работать в онлайн-офисах, производить вычисления.<br /><br />
+            работать в онлайн-офисах, производить вычисления.<br /><br />Производители и поставщики логистических услуг в последнее время все активнее используют облачные технологии с целью сокращения своих издержек и оптимизации бизнес-операций.
 
 
-            На данный момент самым огромным и самым популярным сервисом является Amazon Web Services (AWS).
+            <br /><br />На данный момент самым огромным и самым популярным сервисом является Amazon Web Services (AWS).
 
             <br /><br /><br /><b>&nbsp;&nbsp;&nbsp;&nbsp;Amazon Web Services (AWS)</b> – это самая распространенная в мире облачная система с широчайшими возможностями, предоставляющая более 200 полнофункциональных сервисов для центров обработки данных по всей планете.
             AWS используется для снижения затрат, повышения гибкости и ускоренного внедрения инноваций.
@@ -56,7 +56,15 @@
             <br /><br />&#10004;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выстраивать оптимальные маршруты
             <br /><br />&#10004;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Контролировать время заказа и местонахождение груза
 
-            <br /><br /><br />
+            <br /><br /><br /><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Кроме Amazon Web Services в настоящий момент в логистике широко используются следующие облачные сервисы:</b>
+            <br /><br /><br />&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Облачная платформа КРОК</b> - инфраструктурное облако с AWS-like API.
+            <br /><br />&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Резервное копирование (BaaS)</b> - облачный сервис резервного копирования данных на базе одного из лидирующих на рынке решений - Veeam Backup & Replication с технологией Cloud Connect. Сервис позволяет выполнять резервное копирование любых физических или виртуальных серверов и сохранять резервные копии в облаке LanCloud.
+            <br /><br />&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Облачные базы данных (DBaaS)</b> - это полностью управляемые СУБД, созданные и развернутые в облаке. По сути это Database-as-a-Service (DBaaS): базы данных предоставляются как готовый к работе сервис (Managed Service).
+            <br /><br />&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Kubernetes</b> — открытое программное обеспечение для оркестровки контейнеризированных приложений — автоматизации их развёртывания, масштабирования и координации в условиях кластера.
+            <br /><br />&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Виртуальные рабочие места (VDI)</b> - инфраструктура управления виртуальными рабочими столами пользователей, размещёнными на сервере. Это форма виртуализации рабочих столов, при которой образ рабочего стола запускается на виртуальной машине и доставляется клиенту по сети.
+
+
+
         </p>
 
     </section>
