--- a/problemi-vnedreniya.html
+++ b/problemi-vnedreniya.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -40,7 +40,7 @@
         <h3 style="text-align: center;">Основные проблемы внедрения облачных технологий</h3>
 
         <p>
-            <b>1) Безопасность</b>
+            <b>Безопасность</b>
             <br />66% ИТ-специалистов считают безопасность основной проблемой для внедрения облачных технологий.
             Мы выяснили, что наибольшую обеспокоенность вызывает мнение о снижении уровня безопасности. Реальность такова, что поставщики услуг публичного облака инвестируют в безопасность гораздо больше,
             чем любая отдельная компания или государственный департамент. Переход в облако не снижает уровень безопасности, а повышает его.
@@ -51,22 +51,22 @@
             Преодоление этой проблемы связано не столько с новой инфраструктурой безопасности, сколько с культурным сдвигом.
             Необходимо задаться вопросом: "Как моя компания или государственный департамент могут освоить облачные технологии?".
 
-            <br /><br /><b>2) Блокировка вендоров</b>
-            <br /><br />Блокировка поставщика остается серьезной проблемой для многих компаний.
+            <br /><br /><b>Блокировка вендоров</b>
+            <br />Блокировка поставщика остается серьезной проблемой для многих компаний.
             Беспокойство вызывает тот факт, что после перевода всех систем в облако компания будет привязана к одному и тому же вендору, даже если его цены вырастут.
             Это особенно важно, учитывая неуклонное снижение стоимости облачных услуг во всем мире.
             Джефф Безос, основатель компании Amazon, дал знаменитое определение "закону Безоса", предсказав, что стоимость облачных вычислений будет снижаться вдвое каждые 18 месяцев.
             Как видно из приведенного ниже графика, мы убедились, что это действительно так.
             При таком постоянном снижении цен последнее, чего хочет компания, — это быть привязанной к неконкурентоспособному поставщику.
 
-            <br /><br /><b>3) Недостаток квалификации</b>
+            <br /><br /><b>Недостаток квалификации</b>
             <br />Одной из наиболее острых проблем, препятствующих внедрению облачных технологий, является нехватка квалифицированных кадров.
             Как компания сможет осуществить переход на облачные технологии, если у нее нет нужных специалистов?
             В исследовании PwC 2020 года, проведенном среди руководителей компаний, 77% руководителей были обеспокоены вопросом о доступности ключевых навыков.
             Опрос также показал, что те организации, которые сосредоточились на повышении квалификации своих сотрудников, опередили своих коллег по многим показателям и были более уверены в своем будущем.
 
-            <br /><br /><b>4) Инвестиции в существующие центры обработки данных</b>
-            <br /><br />Существующие инвестиции в центры обработки данных могут стать обоюдоострым мечом для внедрения облачных технологий. 
+            <br /><br /><b>Инвестиции в существующие центры обработки данных</b>
+            <br />Существующие инвестиции в центры обработки данных могут стать обоюдоострым мечом для внедрения облачных технологий. 
             С одной стороны, уже вложив значительные средства в центр обработки данных, компании при этом неохотно переходят на облако. 
             С другой стороны, именно стоимость существующих центров обработки данных толкает многие компании к переходу в облако. 
             Где бы вы ни находились, основные преимущества облачных вычислений носят долгосрочный характер. Большинство компаний не видят значительной экономии в краткосрочной перспективе; 
