--- a/sources.html
+++ b/sources.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
-</head>
 
+</head>
 <body>
     <section class="header2">
         <nav>
@@ -25,34 +25,43 @@
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
                     <li><a href="about-us.html" alt="index" title="Создатели сайта">О нас</a></li>
 
+
                 </ul>
             </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
         <div class="text-box">
             <h1 align="center">Источники</h1>
 
-
         </div>
+    </section>
 
-        <section class="clouds">
-            <p>
-                
-            </p>
+    <section class="clouds">
+        <p>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Сайты и статьи, которыми мы пользовались при создании проекта:</b>
+            <br /><br /><a href="https://cloud.croc.ru/blog/expert-opinion/oblaka-zavoevyvayut-logistiku/">Статья: Облака завоевывают логистику</a>
+            <br /><br /><a href="https://www.e-xecutive.ru/wiki/index.php/%D0%9E%D0%B1%D0%BB%D0%B0%D1%87%D0%BD%D1%8B%D0%B5_%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8">Что такое Облачные технологии?</a>
+            <br /><br /><a href="https://netology.ru/blog/12-2021-cloud-services#:~:text=%D0%9E%D0%B1%D0%BB%D0%B0%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BF%D0%BB%D0%B0%D1%82%D1%84%D0%BE%D1%80%D0%BC%D0%B0%20%E2%80%94%20%D1%8D%D1%82%D0%BE%20%D1%81%D0%B5%D1%82%D1%8C%20%D1%81%D0%B5%D1%80%D0%B2%D0%B5%D1%80%D0%BE%D0%B2,%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F%20%D1%81%D0%B5%D1%80%D0%B2%D0%B5%D1%80%D0%BE%D0%B2%20%D0%B8%20%D1%86%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D1%8B%D1%85%20%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9.">Что такое облачные сервисы?</a>
+            <br /><br /><a href="https://uguide.ru/tablica-osnovnykh-tegov-html-s-primerami">Основные html теги</a>
+            <br /><br /><a href="https://html5css.ru/cssref/default.php">Основные теги css</a>
 
-        </section>
-
+        
+        </p>
 
     </section>
 
 
-    <!--Нижняя панель сайта-->
 
+
+    <!--Нижняя панель сайта-->
     <div class="bot">
         <p>
             <br />
             РУТ (МИИТ)&nbsp;&nbsp;ИМТК&nbsp;&nbsp;ОМН-111 <br />2022
         </p>
     </div>
+
 </body>
+</html>>
 </html>
