--- a/about-us.html
+++ b/about-us.html
@@ -62,11 +62,11 @@
             <br />&bull;&nbsp;Предоставить список необходимых критериев SEO для сайта
 
             <br /><br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="text-decoration: underline;">Беляков Иван</h3>
-            <!--<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img style="width: 50%" src="images/profile.jpg" align="middle" alt="index.html" title="Беляков Иван" />-->
+            <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img style="width: 50%" src="images/profile.jpg" align="middle" alt="index.html" title="Беляков Иван" />
             &nbsp;&nbsp;&nbsp;&nbsp;<br /><b style="text-decoration: underline;">Задачи:</b>
-            <br />Сбор контента
-            <br />Освоить базовые навыки HTML, CSS и найти хостинг для сайта
-            <br />Написать код, используя предоставленне данные (контент, структуру сайта,макет дизайна, критерии SEO)
+            <br />&bull;&nbsp;Сбор контента
+            <br />&bull;&nbsp;Освоить базовые навыки HTML, CSS и найти хостинг для сайта
+            <br />&bull;&nbsp;Написать код, используя предоставленне данные (контент, структуру сайта,макет дизайна, критерии SEO)
 </section>
 
 
