--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="keywords" content="облачные технологии в логистике, логистике, облачные, технологии" />
     <title>Облачные технологии хранения в логистике</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,28 +16,31 @@
 <body>
     <section class="header">
         <nav>
+            <a href="index.html"><img style="border-radius: 40px;" src="images/logo1.png" /></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 10px; padding: 5px; ">
+                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 0px; padding: 12px; ">
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
-                    <li><a href="oblachnie-servisi.html" alt="index" title="Что такое облачные сервисы?">Облачные сервисы</a></li>
+                    <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
                     <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Приемущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
                     <li><a href="about-us.html" alt="index" title="Создатели сайта">О нас</a></li>
 
                 </ul>
+                
             </div>
+
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
     <div class="text-box">
         <h1 style="text-align: center;">Облачные технологии в транспортной логистике</h1>
         <br />
-        <p>Термин "Облачное хранилище" кажется чем-то непонятным. Люди используют его часто, но редко могут объяснить его смысл. 
-        На нашем сайте мы постарались объяснить что же это такое. 
-        Здесь вы сможете узнать базовую теорию про облачные технологии, какие существуют облачные сервисы и как применять их в логистике.
+        <p>Термин "Облачные технологии" кажется чем-то непонятным. Люди используют его часто, но редко могут объяснить его смысл. 
+        На нашем сайте мы постарались объяснить что же это такое. А также рассказать про облачные технологии в логистике.
+        Здесь вы сможете узнать базовую теорию про облачные технологии, какие существуют облачные технологии и как их проименяют в логистике.
         </p>
 
     </div>
