--- a/sources.html
+++ b/sources.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -14,12 +14,13 @@
 <body>
     <section class="header2">
         <nav>
+            <a href="index.html"><img style="border-radius: 40px;" src="images/logo1.png" /></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 10px; padding: 5px; ">
+                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 0px; padding: 5px; ">
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
-                    <li><a href="oblachnie-servisi.html" alt="index" title="Что такое облачные сервисы?">Облачные сервисы</a></li>
+                    <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
                     <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Приемущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
@@ -38,15 +39,12 @@
     </section>
 
     <section class="clouds">
-        <p>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Сайты и статьи, которыми мы пользовались при создании проекта:</b>
+        <p style="text-align: justify;">
+            <b>Сайты и статьи, которыми мы пользовались при создании проекта:</b>
             <br /><br /><a href="https://cloud.croc.ru/blog/expert-opinion/oblaka-zavoevyvayut-logistiku/">Статья: Облака завоевывают логистику</a>
             <br /><br /><a href="https://www.e-xecutive.ru/wiki/index.php/%D0%9E%D0%B1%D0%BB%D0%B0%D1%87%D0%BD%D1%8B%D0%B5_%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8">Что такое Облачные технологии?</a>
             <br /><br /><a href="https://netology.ru/blog/12-2021-cloud-services#:~:text=%D0%9E%D0%B1%D0%BB%D0%B0%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BF%D0%BB%D0%B0%D1%82%D1%84%D0%BE%D1%80%D0%BC%D0%B0%20%E2%80%94%20%D1%8D%D1%82%D0%BE%20%D1%81%D0%B5%D1%82%D1%8C%20%D1%81%D0%B5%D1%80%D0%B2%D0%B5%D1%80%D0%BE%D0%B2,%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F%20%D1%81%D0%B5%D1%80%D0%B2%D0%B5%D1%80%D0%BE%D0%B2%20%D0%B8%20%D1%86%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D1%8B%D1%85%20%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9.">Что такое облачные сервисы?</a>
-            <br /><br /><a href="https://uguide.ru/tablica-osnovnykh-tegov-html-s-primerami">Основные html теги</a>
-            <br /><br /><a href="https://html5css.ru/cssref/default.php">Основные теги css</a>
-
-        
+            
         </p>
 
     </section>
@@ -63,4 +61,4 @@
     </div>
 
 </body>
-</html>>
+</html>
