--- a/about-us.html
+++ b/about-us.html
@@ -14,12 +14,13 @@
 <body>
     <section class="header2">
         <nav>
+            <a href="index.html"><img style="border-radius: 40px;" src="images/logo1.png" /></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 10px; padding: 5px; ">
+                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 0px; padding: 5px; ">
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
-                    <li><a href="oblachnie-servisi.html" alt="index" title="Что такое облачные сервисы?">Облачные сервисы</a></li>
+                    <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
                     <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Приемущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
@@ -38,7 +39,7 @@
     </section>
 
     <section class="clouds">
-        <p>
+        <p style="text-align: justify;">
             <b>Студенты 1 курса РУТ (МИИТ) ИМТК группы ОМН-111</b>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="text-decoration: underline;">Бирюлина Ксения</h3>
             <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img style="width: 50%" src="images/ksenia.jpg" align="middle" alt="index.html" title="Бирюлина Ксения" />
@@ -66,7 +67,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;<br /><b style="text-decoration: underline;">Задачи:</b>
             <br />&bull;&nbsp;Сбор контента
             <br />&bull;&nbsp;Освоить базовые навыки HTML, CSS и найти хостинг для сайта
-            <br />&bull;&nbsp;Написать код, используя предоставленне данные (контент, структуру сайта,макет дизайна, критерии SEO)
+            <br />&bull;&nbsp;Написать код, используя предоставленне данные (контент, структуру сайта, макет дизайна, критерии SEO)
 </section>
 
 
