--- a/problemi-vnedreniya.html
+++ b/problemi-vnedreniya.html
@@ -3,7 +3,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="keywords" content="проблем, проблемы, облачные, облачных, технологии, облачные технологии, сервиса" />
     <title>Облачные технологии хранения в логистике</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +16,13 @@
 <body>
     <section class="header2">
         <nav>
+            <a href="index.html"><img style="border-radius: 40px;" src="images/logo1.png" /></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 10px; padding: 5px; ">
+                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 0px; padding: 5px; ">
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
-                    <li><a href="oblachnie-servisi.html" alt="index" title="Что такое облачные сервисы?">Облачные сервисы</a></li>
+                    <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
                     <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Приемущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
@@ -37,12 +40,13 @@
     </section>
 
     <section class="cloudt">
-        <h3 style="text-align: center;">Основные проблемы внедрения облачных технологий</h3>
+        <h2 style="text-align: center;">Основные проблемы внедрения облачных технологий</h2>
 
-        <p>
-            <b>Безопасность</b>
-            <br />66% ИТ-специалистов считают безопасность основной проблемой для внедрения облачных технологий.
-            Мы выяснили, что наибольшую обеспокоенность вызывает мнение о снижении уровня безопасности. Реальность такова, что поставщики услуг публичного облака инвестируют в безопасность гораздо больше,
+        <p style="text-align: justify;">
+            <br /><h3>Безопасность</h3>
+            66% ИТ-специалистов считают безопасность основной проблемой для внедрения облачных технологий.
+            Мы выяснили, что наибольшую обеспокоенность вызывает мнение о снижении уровня безопасности. <img src="images/safe.png" align="right" title="Безопасность" style="width: 20%; margin: 20px; border-radius: 50%;" />
+            Реальность такова, что поставщики услуг публичного облака инвестируют в безопасность гораздо больше,
             чем любая отдельная компания или государственный департамент. Переход в облако не снижает уровень безопасности, а повышает его.
 
             <br /><br />Например, компания Microsoft ежегодно инвестирует 1 миллиард долларов в кибербезопасность своей облачной платформы Azure,
@@ -51,23 +55,24 @@
             Преодоление этой проблемы связано не столько с новой инфраструктурой безопасности, сколько с культурным сдвигом.
             Необходимо задаться вопросом: "Как моя компания или государственный департамент могут освоить облачные технологии?".
 
-            <br /><br /><b>Блокировка вендоров</b>
-            <br />Блокировка поставщика остается серьезной проблемой для многих компаний.
-            Беспокойство вызывает тот факт, что после перевода всех систем в облако компания будет привязана к одному и тому же вендору, даже если его цены вырастут.
+            <br /><br /><h3>Блокировка вендоров</h3>
+            Блокировка поставщика остается серьезной проблемой для многих компаний.<img src="images/blocked1.jpg" align="right" title="Блокировка" style="width: 20%; margin: 20px; border-radius: 50%;" />
+            Беспокойство вызывает тот факт, что после перевода всех систем в облако компания 
+            будет привязана к одному и тому же вендору, даже если его цены вырастут.
             Это особенно важно, учитывая неуклонное снижение стоимости облачных услуг во всем мире.
             Джефф Безос, основатель компании Amazon, дал знаменитое определение "закону Безоса", предсказав, что стоимость облачных вычислений будет снижаться вдвое каждые 18 месяцев.
             Как видно из приведенного ниже графика, мы убедились, что это действительно так.
             При таком постоянном снижении цен последнее, чего хочет компания, — это быть привязанной к неконкурентоспособному поставщику.
 
-            <br /><br /><b>Недостаток квалификации</b>
-            <br />Одной из наиболее острых проблем, препятствующих внедрению облачных технологий, является нехватка квалифицированных кадров.
+            <br /><br /><h3>Недостаток квалификации</h3>
+            Одной из наиболее острых проблем, препятствующих внедрению облачных технологий, является нехватка квалифицированных кадров.<img src="images/quality.png" align="right" title="Недостаток квалификации" style="width: 20%; margin: 20px; " />
             Как компания сможет осуществить переход на облачные технологии, если у нее нет нужных специалистов?
             В исследовании PwC 2020 года, проведенном среди руководителей компаний, 77% руководителей были обеспокоены вопросом о доступности ключевых навыков.
             Опрос также показал, что те организации, которые сосредоточились на повышении квалификации своих сотрудников, опередили своих коллег по многим показателям и были более уверены в своем будущем.
 
-            <br /><br /><b>Инвестиции в существующие центры обработки данных</b>
-            <br />Существующие инвестиции в центры обработки данных могут стать обоюдоострым мечом для внедрения облачных технологий. 
-            С одной стороны, уже вложив значительные средства в центр обработки данных, компании при этом неохотно переходят на облако. 
+            <br /><br /><h3>Инвестиции в существующие центры обработки данных</h3>
+            Существующие инвестиции в центры обработки данных могут стать обоюдоострым мечом для внедрения облачных технологий. 
+            С одной стороны, уже вложив значительные средства в центр обработки данных, компании при этом неохотно переходят на облако. <img src="images/invest.png" align="right" title="Инвестиции" style="width: 20%; margin: 20px;" />
             С другой стороны, именно стоимость существующих центров обработки данных толкает многие компании к переходу в облако. 
             Где бы вы ни находились, основные преимущества облачных вычислений носят долгосрочный характер. Большинство компаний не видят значительной экономии в краткосрочной перспективе; 
             скорее преимущества появляются по мере замены бизнес-модели, основанной на капитальных затратах, на модель, основанную на операционных затратах (CapEx в сравнении с OpEx). 
