--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -3,22 +3,26 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="keywords" content="облачные, облачных, технологии, облачные технологии," />
     <title>Облачные технологии хранения в логистике</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <section class="header2">
         <nav>
+            <a href="index.html"><img style="border-radius: 40px;" src="images/logo1.png" /></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 10px; padding: 5px; ">
+                <ul style="background: #0C0826; border: 2px solid #555; border-radius: 30px; text-align: center; margin: 0px; padding: 5px; ">
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
-                    <li><a href="oblachnie-servisi.html" alt="index" title="Что такое облачные сервисы?">Облачные сервисы</a></li>
+                    <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
                     <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Приемущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
@@ -39,16 +43,19 @@
     <!--cloudt Облачные технологии 2я страница-->
     <section class="cloudt">
 
-        <p>
+        <p style="text-align: justify;">
             <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Облачные технологии</b> — IT-технологии, которые позволяют хранить и обрабатывать информацию на удалённых серверах.
             Облачные технологии позволяют перенести вычислительные процессы и хранение данных на удалённые серверы,
             а пользователю для доступа к ним и работы с ними достаточно иметь выход в интернет со своего личного устройства.
             <br />В облачных технологиях "облака" разделяют на уровни и категории.<br /><br />
         </p>
-        <p style="border:2px #808080 solid; border-radius: 5px; box-shadow:3px 3px 5px #999; text-align:center;  margin:20px; padding:20px;">
+        <p style="border:2px #808080 solid; border-radius: 5px; box-shadow:3px 3px 5px #999; text-align:justify;  margin:20px; padding:20px;">
             Слово «облако» – это метафора, олицетворяющая сложную инфраструктуру, скрывающую за собой все технические детали
         </p>
-        <p>
+        <p style="text-align: justify;">
+
+            <img src="images/cloud2.png" title="Облако" align="left" style="width: 12%; border-radius: 50%;" />
+
             <br /><br />
             <h3 style="text-align: center;">Уровни облачных вычислений</h3>
 
@@ -56,7 +63,8 @@
             Пользователи получают базовые вычислительные ресурсы: процессоры и устройства для хранения информации – и используют их для создания собственных операционных систем и приложений.
             Потребитель не управляет базовой инфраструктурой облака, но имеет контроль над операционными системами, системами хранения, развернутыми приложениями.
             Возможен ограниченный контроль выбора сетевых компонентов (например, хост с сетевыми экранами).
-            <br /><br /><b>&nbsp;2</b>. Следующий уровень «Платформа как услуга» (PaaS, platform as a service).
+
+            <br /><br /><b>&nbsp;2</b>. Следующий уровень «Платформа как услуга» <img src="images/levels.jpg" title="Уровни облачных вычислений" align="right" style="margin: 10px; width: 45%;" />(PaaS, platform as a service).
             Пользователи имеют возможность устанавливать собственные приложения на платформе, предоставляемой провайдером услуги.
             Пользователь не управляет базовой инфраструктурой облака: сетями, серверами, операционными системами и системами хранения данных,
             но имеет контроль над развернутыми приложениями и некоторыми параметрами конфигурации среды хостинга.
@@ -65,19 +73,24 @@
             Потребитель пользуется приложениями провайдера, работающего в облачной инфраструктуре.
             При этом пользователь не управляет базовой инфраструктурой облака – сетями, серверами, операционными системами, системами хранения,
             даже индивидуальными настройками приложений за исключением некоторых пользовательских настроек конфигурации приложения.
-            
-            <br /><br /><br /><h3 style="text-align: center;">Категории "облаков"</h3>
 
-            <br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Публичное облако</b> (Public cloud) – одновременный доступ многих пользователей к IT-инфраструктуре.
+            <br /><br /><h3 style="text-align: center;">Категории облачных технологий</h3>
+
+            <br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Частное облако</b> (Private cloud) — IT-инфраструктура, которую контролирует и эксплуатирует только один абонент в собственных интересах.
+            Инфраструктура для управления частным облаком может размещаться либо в помещениях пользователя, либо у внешнего оператора, либо частично у пользователя и оператора.
+
+            <br /><br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Облако сообщества</b> (Community cloud). Облачная инфраструктура, подготовленная для использования конкретным сообществом потребителей,
+            имеющих общие проблемы (например, миссии, требования безопасности, политики).
+
+            <br /><br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Публичное облако</b> (Public cloud) – одновременный доступ многих пользователей к IT-инфраструктуре.
             Но возможности управлять и обслуживать данное облако у пользователей нет, вся ответственность возложена на владельца данного облака.
             Абонентом предлагаемых сервисов может стать любая компания или частное лицо.
-            <br /><br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Частное облако</b> (Private cloud) — IT-инфраструктура, которую контролирует и эксплуатирует только один абонент в собственных интересах.
-            Инфраструктура для управления частным облаком может размещаться либо в помещениях пользователя, либо у внешнего оператора, либо частично у пользователя и оператора.
+
             <br /><br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Гибридное облако</b> (Hybrid cloud) — это IT-инфраструктура, в которой соединены лучшие качества публичного и приватного облака.
             Такая композиция имеет уникальные объекты, связанные между собой стандартизированными или собственными технологиями, которые позволяют
             переносить данные или приложения между компонентами (например, для балансировки нагрузки между облаками).
-            <br /><br /><b>&bull;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Облако сообщества</b> (Community cloud). Облачная инфраструктура, подготовленная для использования конкретным сообществом потребителей,
-            имеющих общие проблемы (например, миссии, требования безопасности, политики).
+
+            <img src="images/category.jpg" title="Категории облачных технологий" style="width: 100%;" />
         </p>
     </section>
 
