--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -54,7 +54,7 @@
         </p>
         <p style="text-align: justify;">
 
-            <img src="images/cloud2.png" title="Облако" align="left" style="width: 12%; border-radius: 50%;" />
+            <img src="images/Cloud2.png" title="Облако" align="left" style="width: 12%; border-radius: 50%;" />
 
             <br /><br />
             <h3 style="text-align: center;">Уровни облачных вычислений</h3>
