--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -3,7 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="облачные, облачных, технологии, облачные технологии," />
+    <meta name="description" content="Понятие облачных техногий, их уровни и категории">
+    <meta name="keywords" content="облачные, технологии, облачные технологии," />
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
