--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Понятие облачных техногий, их уровни и категории">
-    <meta name="keywords" content="облачные, технологии, облачные технологии," >
+    <meta name="keywords" content="облачные, технологии, облачные технологии">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
