--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Что такое облачные технологии и как они могут быть связаны с логистикой"
-    <meta name="keywords" content="облачные технологии в логистике, логистика, облачные, технологии" />
+    <meta name="description" content="Что такое облачные технологии и как они могут быть связаны с логистикой">
+    <meta name="keywords" content="облачные технологии в логистике, логистика, облачные, технологии">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
