--- a/clouds-in-logistics.html
+++ b/clouds-in-logistics.html
@@ -3,7 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="облачные, облачных, логистике, логист, сервис" />
+    <meta name="description" content="Облачные решения для логистики, облачные сервисы, облычный трейсинг">
+    <meta name="keywords" content="облачные, логистика, логист, сервис">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
