--- a/problemi-vnedreniya.html
+++ b/problemi-vnedreniya.html
@@ -3,7 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="проблем, проблемы, облачные, облачных, технологии, облачные технологии, сервиса" />
+    <meta name="description" content="Основные проблемы внедрения облачных технологий">
+    <meta name="keywords" content="проблем, проблемы, облачные, технологии, облачные технологии, сервис">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
