--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <br />
         <p>Термин "Облачные технологии" кажется чем-то непонятным. Люди используют его часто, но редко могут объяснить его смысл. 
         На нашем сайте мы постарались объяснить что же это такое. А также рассказать про облачные технологии в логистике.
-        Здесь вы сможете узнать базовую теорию про облачные технологии, какие существуют облачные технологии и как их проименяют в логистике.
+        Здесь вы сможете узнать базовую теорию про облачные технологии, какие существуют облачные технологии и как их применяют в логистике.
         </p>
 
     </div>
