--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;<br /><b style="text-decoration: underline;">Задачи:</b>
             <br />&bull;&nbsp;Сбор контента
             <br />&bull;&nbsp;Освоить базовые навыки HTML, CSS и найти хостинг для сайта
-            <br />&bull;&nbsp;Написать код, используя предоставленне данные (контент, структуру сайта, макет дизайна, критерии SEO)
+            <br />&bull;&nbsp;Написать код, используя предоставленные данные (контент, структуру сайта, макет дизайна, критерии SEO)
 </section>
 
 
