--- a/priemuschestva.html
+++ b/priemuschestva.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html" alt="index" title="Главная">Главная</a></li>
                     <li><a href="oblachnie-technologii.html" alt="index" title="Что такое облачные технологии?">Облачные технологии</a></li>
                     <li><a href="clouds-in-logistics.html" alt="index" title="Облачные технологии в логистике">Облака в логистике</a></li>
-                    <li><a href="priemuschestva.html" alt="index" title="Приемущества облачных технологий">Преимущества</a></li>
+                    <li><a href="priemuschestva.html" alt="index" title="Преимущества облачных технологий">Преимущества</a></li>
                     <li><a href="problemi-vnedreniya.html" alt="index" title="Проблемы внедрения облачных технологий">Проблемы внедрения</a></li>
                     <li><a href="sources.html" alt="index" title="Источники информации">Источники</a></li>
                     <li><a href="about-us.html" alt="index" title="Создатели сайта">О нас</a></li>
