--- a/priemuschestva.html
+++ b/priemuschestva.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Как использование облачных технологий помогает в логистике">
-    <meta name="keywords" content="облако, облачные, технологи, технологии, логистические, логист">
+    <meta name="description" content="Как использование облачных технологий помогает в логистике? А также популярность облачных технологий.">
+    <meta name="keywords" content="облако в логистике, облачные технологии, использование облачных технологий">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
