--- a/problemi-vnedreniya.html
+++ b/problemi-vnedreniya.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Основные проблемы внедрения облачных технологий">
-    <meta name="keywords" content="проблем, проблемы, облачные, технологии, облачные технологии, сервис">
+    <meta name="description" content="Основные проблемы внедрения облачных технологий, как их можно обезопасить, блокировка поставщика,Инвестиции в существующие центры обработки данных, и как повысить квалификацию кадров?">
+    <meta name="keywords" content="облако, облачные вычисления">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
