--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Что такое облачные технологии и как они могут быть связаны с логистикой">
     <meta name="keywords" content="облачные технологии в логистике">
-    <title>Облачные технологии хранения в логистике</title>
+    <title>Облачные технологии в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
