--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Что такое облачные технологии, а также какие бывают уровни вычислений и категории облачных технологий">
-    <meta name="keywords" content="облачные технологии,инфраструктура">
+    <meta name="keywords" content="облачные технологии,инфраструктура облака">
     <title>Облачные технологии хранения в логистике</title>
 
     <link rel="stylesheet" href="style.css" />
