--- a/oblachnie-technologii.html
+++ b/oblachnie-technologii.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Что такое облачные технологии, а также какие бывают уровни вычислений и категории облачных технологий">
     <meta name="keywords" content="облачные технологии,инфраструктура облака">
-    <title>Облачные технологии хранения в логистике</title>
+    <title> Облачные технологии, инфраструктура облака</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
