--- a/clouds-in-logistics.html
+++ b/clouds-in-logistics.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Какие есть облачные решения для логистики? Виды облачны сервисов, и что такое облычный трейсинг?">
     <meta name="keywords" content="облачный сервис">
-    <title>Облачные технологии хранения в логистике</title>
+    <title>облачный сервис</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
