--- a/priemuschestva.html
+++ b/priemuschestva.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Как использование облачных технологий помогает в логистике? А также популярность облачных технологий.">
     <meta name="keywords" content="облако в логистике, облачные технологии, использование облачных технологий">
-    <title>Облачные технологии хранения в логистике</title>
+    <title>облако в логистике, облачные технологии, использование облачных технологий</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
