--- a/problemi-vnedreniya.html
+++ b/problemi-vnedreniya.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Основные проблемы внедрения облачных технологий, как их можно обезопасить, блокировка поставщика, инвестиции в существующие центры обработки данных, и как повысить квалификацию кадров?">
     <meta name="keywords" content="облачные технологии">
-    <title>Облачные технологии хранения в логистике</title>
+    <title>облачные технологии</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
