--- a/clouds-in-logistics.html
+++ b/clouds-in-logistics.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Какие есть облачные решения для логистики? Виды облачны сервисов, и что такое облычный трейсинг?">
-    <meta name="keywords" content="облачный сервис">
-    <title>облачный сервис</title>
+    <meta name="keywords" content="облачные">
+    <title>облачные</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
